openafs (1.4.0-2) unstable; urgency=low

  * Install more of the standard OpenAFS utilities.  (Closes: #138851)
    - openafs-dbserver: Install prdb_check and vldb_check.
    - openafs-fileserver: Install voldump.
    - openafs-client: Install fstrace, scout, and up (as afs-up).
  * Do not install kpwvalid.  The default version does little useful and
    the kpwvalid binary must be in AFS for it to take effect.
  * Overhaul the way kernel modules are built.
    - Recommend linux-image rather than kernel-image for newer kernels.
    - Always recommend the kernel package; since it's only a recommends,
      there's no need to special-case the hand-built kernel case.
    - Be less fragile about how the kernel version is used in prep-modules
      to support other ways kernel modules are built.  (Closes: #341836)
    - Add Build-Depends and Uploaders to the openafs-modules-source
      control file.
    - Remove unused parts of prep-modules and heavily comment it.
  * Suggest the same PAM settings for pam_krb5 that libpam-krb5 does.
  * Update uploader address.

 --

openafs (1.4.0-1) unstable; urgency=low

  * New upstream version.
    - Builds correctly with 2.6.13 kernels and software suspend.
    - Builds correctly with 2.6.12-10.  (Closes: #337883)
  * Install afsd in /sbin rather than /usr/sbin.  While putting /usr in
    AFS isn't as common as it once was, no reason to make it harder than
    it needs to be.
  * Update CellServDB to the 2005-10-15 grand.central.org version.
  * Install NEWS as an upstream changelog.
  * Add a watch file.
  * Remove the unused and uninstalled make-links script.

 -- Russ Allbery <rra@stanford.edu>  Sun,  6 Nov 2005 21:37:40 -0800

openafs (1.4rc4-1) unstable; urgency=low

  * New upstream version.
    - Correctly handle root.afs becoming replicated after the client
      starts.  This should resolve the problems with AFS eventually
      failing on the first system using a new cell.  (Closes: #88906)