@@ -4,6 +4,7 @@ openafs (1.4.0-2) unstable; urgency=low
     - openafs-dbserver: Install prdb_check and vldb_check.
     - openafs-fileserver: Install voldump.
     - openafs-client: Install fstrace, scout, and up (as afs-up).
+    - Modify fstrace to load its catalog from /usr/share/openafs.
   * Do not install kpwvalid.  The default version does little useful and
     the kpwvalid binary must be in AFS for it to take effect.
   * Overhaul the way kernel modules are built.
@@ -18,7 +19,7 @@ openafs (1.4.0-2) unstable; urgency=low
   * Suggest the same PAM settings for pam_krb5 that libpam-krb5 does.
   * Update uploader address.
 
- --
+ -- Russ Allbery <rra@debian.org>  Tue,  6 Dec 2005 22:00:11 -0800
 
 openafs (1.4.0-1) unstable; urgency=low
 
